Test Data/WSN/WSN-MELA-4/outputs/wsn-scso/2025-07-18_09-20-18/problem_iter4_stdout_2.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/wsn/main.py", line 7, in <module>
    import gpt  # 自定义的启发式模块
    ^^^^^^^^^^
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\wsn\gpt.py", line 25
    velocity = w*(0.5*np.random.randn(*Positions.shape) + cognitive + social
                 ^
SyntaxError: '(' was never closed
